# Aetherra

./: .env.example  .env.template  .gitignore  .gitignore_security  .lyrixa_last_introspection  .nstate  .pre-commit-config.yaml  .project_protection.json  ADVANCED_GUI_FEATURES_COMPLETE.md  ADVANCED_MEMORY_SYSTEMS_COMPLETION.md  ADVANCED_SYNTAX_IMPLEMENTATION.md  ADVANCED_TOOLS_IMPLEMENTATION_COMPLETE.md  AETHERRA_API_IMPLEMENTATION_COMPLETE.md  AETHERRA_COMPLETE_SYSTEM_TESTING_SUMMARY.md  AETHERRA_COMPLETE_TESTING_ACHIEVEMENT.md  AETHERRA_COMPREHENSIVE_TESTING_REPORT.md  AETHERRA_FINAL_TESTING_SUMMARY.md  AETHERRA_HUB_INTEGRATION_SUCCESS.md  AETHERRA_HUB_PLUGIN_INTEGRATION_COMPLETE.md  AETHERRA_PARSER_FIX_SUMMARY.md  AETHERRA_SYSTEM_CHECK_REPORT.md  AETHERRA_TESTING_COMPLETE_SUMMARY.md  AETHER_INTENT_LANGUAGE_TEST_REPORT.md  AGENT_ARCHIVE_IMPLEMENTATION_COMPLETE.md  AGENT_ARCHIVE_REPLAY_SYSTEM.md  AGENT_BEHAVIOR_IMPLEMENTATION_COMPLETE.md  AGENT_SYNC_SYSTEM_DOCUMENTATION.md  AI_OS_IMPLEMENTATION_COMPLETE.md  ANALYTICS_DASHBOARD_FIXES.md  ANALYTICS_INSIGHTS_ENGINE_COMPLETION_REPORT.md  AST_PARSER_FIX_SUMMARY.md  CHANGELOG.md  CHANGE_MANAGEMENT_IMPLEMENTATION_COMPLETE.md  CHANGE_MANAGEMENT_PROTOCOL.md  CHAT_HISTORY_MANAGER_FIXES.md  CI_CD_IMPLEMENTATION_GUIDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLI_FIX_VALIDATION_REPORT.md  CLI_REVOLUTION_COMPLETE.md  (+676 more)
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/: README.md  pyproject.toml
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/api/: README.md  __init__.py  aether_server.py  models.py  requirements.txt  run_server.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/cli/: basic.py  demo.py  main.py  persona.py  plugin.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/core/: aetherra_interpreter.py  aetherra_memory.py  ai_runtime.py  chat_router.py  config.py  idle_reflection.py  memory_manager.py  multi_llm_manager.py  plugin_api.py  prompt_engine.py  syntax_tree.py  webhook_manager.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/core/ai/: __init__.py  multi_llm_manager.py  runtime.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/core/engine/: aetherra_engine.py  goal_forecaster.py  introspection_controller.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/core/interpreter/: __init__.py  enhanced.py  enhanced_interpreter.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/core/memory/: __init__.py  base.py  vector.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/core/parser/: aetherra_parser.py  enhanced_parser.py  intent_parser.py  parser.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/core/runtime_legacy/: __init__.py  context.py  executor.py  services.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/docs/: AETHERRA_GRAMMAR.lark  AETHERRA_LANGUAGE_SPECIFICATION.md  AETHERRA_MANIFESTO.md  AETHERRA_PERSONA_SYSTEM.md  AETHERRA_PLUGIN_REGISTRY_SPECIFICATION.md  AETHERRA_RESERVED_KEYWORDS.md  AI_OS_ADVANCED_FEATURES.md  CLAIMS_ACCURACY_REVIEW.md  CODE_OF_CONDUCT.md  DEPENDENCIES.md  DUMMY_CLASS_ENHANCEMENTS.md  EMOJI_REMOVAL_SUMMARY.md  INSTALLATION.md  INTERPRETER_ENHANCEMENT_PLAN.md  INTERPRETER_ERROR_ANALYSIS.md  LYRIXA_ASSISTANT_INTEGRATION.md  LYRIXA_CHAT_UPGRADE_PLAN.md  LYRIXA_CHAT_UPGRADE_VALIDATION.md  MANUAL_EXTENSION_INSTALL.md  MODULAR_ARCHITECTURE.md  PLUGIN_DEMO_ANALYSIS.md  PLUGIN_SDK.md  PROJECT_OVERVIEW_SYSTEM.md  PROJECT_PROTECTION.md  README.md  SECURITY.md  SELF_EDITING_ARCHITECTURE.md  UI_ACCESSIBILITY_GUIDELINES.md  UI_PERFORMANCE_OPTIMIZATION.md  cache-buster-test.html  link-audit.html  script.js  styles.css
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/lyrixa/: README.md  __init__.py  assistant.py  config.json  conversation_manager.py  developer_backup_tools.py  fixed_api_server.py  intelligence.py  intelligence_integration.py  intelligence_integration_backup.py  intelligence_standalone_backup.py  launcher.py  launcher_backup.py  lyrixa_memory.json  modular_architecture_summary.py  plugin_discovery.py  reasoning_memory_layer.py  self_improvement_dashboard.py  self_improvement_dashboard_api.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/persona/: __init__.py  emotional_memory.py  engine.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/plugins/: __init__.py  example_plugin.aether  file_tools.py  manager.py  math_plugin.py  search_plugin.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/runtime/: script_memory_integrator.py  script_registry_loader.py  script_router.py  script_runner.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/stdlib/: executor.py  optimizer.py  sysmon.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/system/: agents.aether  utils.aether
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/tests/: __init__.py  plugin_test.aether  stdlib_test.aether
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/ui/: __init__.py
Unused/legacy_cleanup_20250722_131319/Aetherra_backup_20250712_184525/Aetherra_backup_20250712_184525/utils/: launch_utils.py  logging_utils.py
Unused/legacy_cleanup_20250722_131319/config/config/project/: pyproject.toml
(+2920 files in other folders)
