[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherra"
version = "2.0.0"
description = "AI-Native Development Platform with Aetherra language and Lyrixa assistant"
authors = [
    {name = "Aetherra Development Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Artificial Intelligence",
]
dependencies = [
    "pyside6>=6.4.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "sqlite3",
    "pathlib",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aetherra/aetherra"
Repository = "https://github.com/aetherra/aetherra"
Documentation = "https://aetherra.readthedocs.io"

[project.scripts]
aetherra = "Aetherra.cli:main"
lyrixa = "Aetherra.ui.enhanced_lyrixa:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Aetherra*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
